--- a/plugin/src/main/resources/graphs/prometheus-node-exporter.properties
+++ b/plugin/src/main/resources/graphs/prometheus-node-exporter.properties
@@ -1,11 +1,22 @@
-##############################################################################
+    ##############################################################################
 ##
 ##  Please add report definition in a new line to make it easier
 ##  for script based sanity checks
 ##
 ##################################################
 
-reports=nodeexporter.loadavg
+reports=nodeexporter.loadavg, \
+nodeexporter.memory, \
+nodeexporter.memoryPercent, \
+nodeexporter.fsspace, \
+nodeexporter.netUsage, \
+nodeexporter.netErr, \
+nodeexporter.netPackets, \
+nodeexporter.netstatError, \
+nodeexporter.uptime, \
+nodeexporter.timeoffset, \
+nodeexporter.fdescr, \
+nodeexporter.cpustats
 
 report.nodeexporter.loadavg.name=Load Average
 report.nodeexporter.loadavg.columns=load1, load5, load15
@@ -28,5 +39,299 @@ report.nodeexporter.loadavg.command=--title="Load Average" --units-exponent=0 \
  LINE2:float15#a40000:"15 minute" \
  GPRINT:float15:AVERAGE:"Avg \\: %10.2lf" \
  GPRINT:float15:MIN:"Min \\: %10.2lf" \
- GPRINT:float15:MAX:"Max \\: %10.2lf\\n"
- 
+ GPRINT:float15:MAX:"Max \\: %10.2lf\\n" \
+
+report.nodeexporter.memory.name=Memory Usage
+report.nodeexporter.memory.columns=MemTotal_bytes, MemAvailable_bytes
+report.nodeexporter.memory.type=nodeSnmp
+report.nodeexporter.memory.command=--title="Memory Usage" \
+ --vertical-label="Bytes" \
+ --base=1024 \
+ DEF:MemTotal_bytes={rrd1}:MemTotal_bytes:AVERAGE \
+ DEF:MemAvailable_bytes={rrd2}:MemAvailable_bytes:AVERAGE \
+ CDEF:sizeBytes=MemTotal_bytes,1024,* \
+ CDEF:availBytes=MemAvailable_bytes,1024,* \
+ LINE2:sizeBytes#0000ff:"Total" \
+ LINE2:availBytes#0000ff:"Available" \
+ GPRINT:sizeBytes:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:sizeBytes:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:sizeBytes:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.memoryPercent.name=Memory Usage Percent
+report.nodeexporter.memoryPercent.columns=MemTotal_bytes, MemAvailable_bytes
+report.nodeexporter.memoryPercent.type=nodeSnmp
+report.nodeexporter.memoryPercent.command=--title="Memory Usage Percent" \
+ --vertical-label="Percent" \
+ --base=1024 \
+ DEF:MemTotal_bytes={rrd1}:MemTotal_bytes:AVERAGE \
+ DEF:MemAvailable_bytes={rrd2}:MemAvailable_bytes:AVERAGE \
+ CDEF:sizeBytes=MemTotal_bytes,1024,* \
+ CDEF:availBytes=MemAvailable_bytes,1024,* \
+ CDEF:percent=MemTotal_bytes,MemAvailable_bytes,-,100,*,MemTotal_bytes,/ \
+ LINE2:percent#0000ff:"Usage" \
+ GPRINT:percent:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:percent:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:percent:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.fsspace.name=Filesystem Space
+report.nodeexporter.fsspace.columns=filesystem_size_bytes,filesystem_avail_bytes
+report.nodeexporter.fsspace.type=nodeExporterFilesystem
+report.nodeexporter.fsspace.propertiesValues=mountpoint
+report.nodeexporter.fsspace.command=--title="Disk Space" \
+ --lower-limit 0 \
+ DEF:dtotalk={rrd1}:size_bytes:AVERAGE \
+ DEF:dusedk={rrd2}:avail_bytes:AVERAGE \
+ CDEF:dtotal=dtotalk,1024,* \
+ CDEF:dused=dusedk,1024,* \
+ AREA:dtotal#73d216: \
+ LINE1:dtotal#4e9a06:"Total\\:" \
+ GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:dused#f57900 \
+ LINE1:dused#ce5c00:"Used \\:" \
+ GPRINT:dused:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.netUsage.name=Network Utilization
+report.nodeexporter.netUsage.columns=transmi_bytes_total, receive_bytes_total
+report.nodeexporter.netUsage.type=nodeExporterNetwork
+report.nodeexporter.netUsage.propertiesValues=device
+report.nodeexporter.netUsage.command=--title="Network Utilization" \
+ --lower-limit 0 \
+ DEF:transmit={rrd1}:transmi_bytes_total:AVERAGE \
+ DEF:receive={rrd2}:receive_bytes_total:AVERAGE \
+ CDEF:transmitotal=transmit,1024,* \
+ CDEF:receivedtotal=receive,1024,* \
+ AREA:transmitotal#73d216: \
+ LINE1:transmitotal#4e9a06:"Transmit\\:" \
+ GPRINT:transmitotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transmitotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transmitotal:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:receivedtotal#f57900 \
+ LINE1:receivedtotal#ce5c00:"Receive \\:" \
+ GPRINT:receivedtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivedtotal:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivedtotal:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.netErr.name=Interface Errors
+report.nodeexporter.netErr.columns=transmit_errs_total, receive_errs_total, transm_carrie_total, transmi_colls_total, transm_compre_total, receiv_compre_total, transmit_drop_total, receive_drop_total, transmit_fifo_total, receive_fifo_total
+report.nodeexporter.netErr.type=nodeExporterNetwork
+report.nodeexporter.netErr.propertiesValues=device
+report.nodeexporter.netErr.command=--title="Interface Errors" \
+ --lower-limit 0 \
+ DEF:transErr={rrd1}:transmit_errs_total:AVERAGE \
+ DEF:receivErr={rrd2}:receive_errs_total:AVERAGE \
+ DEF:transCarrie={rrd3}:transm_carrie_total:AVERAGE \
+ DEF:transColl={rrd4}:transmi_colls_total:AVERAGE \
+ DEF:transComp={rrd5}:transm_compre_total:AVERAGE \
+ DEF:receivComp={rrd6}:receiv_compre_total:AVERAGE \
+ DEF:transDrop={rrd7}:transmit_drop_total:AVERAGE \
+ DEF:receivDrop={rrd8}:receive_drop_total:AVERAGE \
+ DEF:transFifo={rrd9}:transmit_fifo_total:AVERAGE \
+ DEF:receivFifo={rrd10}:receive_fifo_total:AVERAGE \
+ LINE1:transErr#4e9a06:"Transmit Errors\\:" \
+ GPRINT:transErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transErr:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:receivErr#ce5c00:"Receive Errors\\:" \
+ GPRINT:receivErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivErr:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:transCarrie#ce5c00:"Transmit Carrier\\:" \
+ GPRINT:transCarrie:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transCarrie:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transCarrie:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:transColl#ce5c00:"Transmit Collusions\\:" \
+ GPRINT:transColl:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transColl:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transColl:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:transComp#ce5c00:"Transmit Compression\\:" \
+ GPRINT:transComp:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transComp:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transComp:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:receivComp#ce5c00:"Receive Compression\\:" \
+ GPRINT:receivComp:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivComp:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivComp:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:transDrop#ce5c00:"Transmit Drop\\:" \
+ GPRINT:transDrop:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transDrop:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transDrop:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:receivDrop#ce5c00:"Receive Drop\\:" \
+ GPRINT:receivDrop:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivDrop:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivDrop:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:transFifo#ce5c00:"Transmit Fifo\\:" \
+ GPRINT:transFifo:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transFifo:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transFifo:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:receivFifo#ce5c00:"Receiv Fifo\\:" \
+ GPRINT:receivFifo:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivFifo:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivFifo:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.netPackets.name=Network Packets
+report.nodeexporter.netPackets.columns=transm_packet_total, receiv_packet_total
+report.nodeexporter.netPackets.type=nodeExporterNetwork
+report.nodeexporter.netPackets.propertiesValues=device
+report.nodeexporter.netPackets.command=--title="Network Packets" \
+ --lower-limit 0 \
+ DEF:transPack={rrd1}:transm_packet_total:AVERAGE \
+ DEF:receivPack={rrd2}:receiv_packet_total:AVERAGE \
+ AREA:transPack#73d216: \
+ LINE1:transPack#4e9a06:"Transmit Packets\\:" \
+ GPRINT:transPack:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:transPack:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:transPack:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:receivPack#f57900 \
+ LINE1:receivPack#ce5c00:"Received Packets \\:" \
+ GPRINT:receivPack:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:receivPack:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:receivPack:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.netstatError.name=Network Errors
+report.nodeexporter.netstatError.columns=netstat_Tcp_InErrs, netsta_Udp_InErrors, netsta_Icmp_InError, netsta_Udp6_InError
+report.nodeexporter.netstatError.type=nodeSnmp
+report.nodeexporter.netstatError.command=--title="Netstat Errors" \
+ --lower-limit 0 \
+ DEF:tcpInErr={rrd1}:netstat_Tcp_InErrs:AVERAGE \
+ DEF:udpInErr={rrd2}:netsta_Udp_InErrors:AVERAGE \
+ DEF:icmpInErr={rrd3}:netsta_Icmp_InError:AVERAGE \
+ DEF:udp6InErr={rrd4}:netsta_Udp6_InError:AVERAGE \
+ LINE1:tcpInErr#4e9a06:"TCP In Errors\\:" \
+ GPRINT:tcpInErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:tcpInErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:tcpInErr:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:udpInErr#4e9a06:"UDP4 In Errors\\:" \
+ GPRINT:udpInErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:udpInErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:udpInErr:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:icmpInErr#4e9a06:"ICMP In Errors\\:" \
+ GPRINT:icmpInErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:icmpInErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:icmpInErr:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE1:udp6InErr#4e9a06:"UDP6 In Errors\\:" \
+ GPRINT:udp6InErr:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:udp6InErr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:udp6InErr:MAX:"Max  \\: %8.2lf %s\\n" \
+
+report.nodeexporter.uptime.name=System Uptime
+report.nodeexporter.uptime.columns=time_seconds
+report.nodeexporter.uptime.type=nodeSnmp
+report.nodeexporter.uptime.command=--title="System Uptime" \
+ --vertical-label="Days" \
+ DEF:time={rrd1}:time_seconds:AVERAGE \
+ CDEF:days=time,8640000,/ \
+ AREA:days#fcaf3e \
+ LINE1:days#f57900:"System Uptime (Days)" \
+ GPRINT:days:AVERAGE:"Avg  \\: %8.1lf %s" \
+ GPRINT:days:MIN:"Min  \\: %8.1lf %s" \
+ GPRINT:days:MAX:"Max  \\: %8.1lf %s\\n" \
+
+report.nodeexporter.timeoffset.name=Time Offset
+report.nodeexporter.timeoffset.columns=timex_offset_second
+report.nodeexporter.timeoffset.type=nodeSnmp
+report.nodeexporter.timeoffset.command=--title="Time Offset" \
+ --lower-limit 0 \
+ DEF:time={rrd1}:timex_offset_second:AVERAGE \
+ AREA:time#73d216: \
+ LINE1:time#4e9a06:"Seconds\\:" \
+ GPRINT:time:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:time:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:time:MAX:"Max  \\: %8.2lf %s\\n" \
+ COMMENT:"\\n" \
+ COMMENT:"Time offset in between local system and reference clock\\n" \
+ COMMENT:" " \
+
+report.nodeexporter.fdescr.name=File Descriptors
+report.nodeexporter.fdescr.columns=process_max_fds,process_open_fds
+report.nodeexporter.fdescr.type=nodeSnmp
+report.nodeexporter.fdescr.command=--title="File Descriptors" \
+ --lower-limit 0 \
+ DEF:maxfds={rrd1}:process_max_fds:AVERAGE \
+ DEF:fds={rrd2}:process_open_fds:AVERAGE \
+ LINE1:maxfds#4e9a06:"Max FDS\\:" \
+ GPRINT:maxfds:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:maxfds:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxfds:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:fds#f57900 \
+ LINE1:fds#ce5c00:"Current FDS \\:" \
+ GPRINT:fds:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:fds:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:fds:MAX:"Max  \\: %8.2lf %s\\n" \
+
+
+#report.nodeexporter.temp.name=Temperature
+#report.nodeexporter.temp.columns=
+#report.nodeexporter.temp.type=nodeExporterHwmon
+#report.nodeexporter.temp.propertiesValues=chip
+#report.nodeexporter.temp.command=--title="Temperature" \
+# --lower-limit 0 \
+# DEF:transPack={rrd1}:transm_packet_total:AVERAGE \
+# DEF:receivPack={rrd2}:receiv_packet_total:AVERAGE \
+# AREA:transPack#73d216: \
+# LINE1:transPack#4e9a06:"Transmit Packets\\:" \
+# GPRINT:transPack:AVERAGE:" Avg  \\: %8.2lf %s" \
+# GPRINT:transPack:MIN:"Min  \\: %8.2lf %s" \
+# GPRINT:transPack:MAX:"Max  \\: %8.2lf %s\\n" \
+# AREA:receivPack#f57900 \
+# LINE1:receivPack#ce5c00:"Received Packets \\:" \
+# GPRINT:receivPack:AVERAGE:" Avg  \\: %8.2lf %s" \
+# GPRINT:receivPack:MIN:"Min  \\: %8.2lf %s" \
+# GPRINT:receivPack:MAX:"Max  \\: %8.2lf %s\\n" \
+
+
+report.nodeexporter.cpustats.name=CPU Statistics
+report.nodeexporter.cpustats.columns=seconds_total_user,second_total_system,seconds_total_idle,seconds_total_nice,second_total_iowait,seconds_total_irq,second_total_softir
+report.nodeexporter.cpustats.type=nodeExporterCpu
+report.nodeexporter.cpustats.propertiesValues=cpu
+report.nodeexporter.cpustats.width=565
+report.nodeexporter.cpustats.height=200
+report.nodeexporter.cpustats.command=--title="CPU Statistics" \
+ --units-exponent 0 \
+ --width 565 \
+ --height 200 \
+ --lower-limit 0 \
+ DEF:ssseconds_total_user={rrd1}:seconds_total_user:AVERAGE \
+ DEF:sssecond_total_system={rrd2}:second_total_system:AVERAGE \
+ DEF:ssseconds_total_idle={rrd3}:seconds_total_idle:AVERAGE \
+ DEF:ssseconds_total_nice={rrd4}:seconds_total_nice:AVERAGE \
+ DEF:sssecond_total_iowait={rrd5}:second_total_iowait:AVERAGE \
+ DEF:ssseconds_total_irq={rrd6}:seconds_total_irq:AVERAGE \
+ DEF:sssecond_total_softir={rrd7}:second_total_softir:AVERAGE \
+ CDEF:cpuNumerator=ssseconds_total_user,ssseconds_total_nice,+,sssecond_total_system,+,sssecond_total_iowait,+,ssseconds_total_irq,+,sssecond_total_softir,+ \
+ CDEF:cpuDivisor=cpuNumerator,ssseconds_total_idle,+ \
+ CDEF:cpuUse=cpuNumerator,cpuDivisor,/,100,* \
+ CDEF:cpuUse10=0,cpuUse,GE,0,float15,IF \
+ CDEF:cpuUse20=10,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse30=20,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse40=30,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse50=40,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse60=50,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse70=60,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse80=70,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse90=80,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse100=90,cpuUse,GT,0,float15,IF \
+ COMMENT:"\\n" \
+ COMMENT:"CPU Utilization (%)\\n" \
+ COMMENT:" " \
+ AREA:cpuUse10#729fcf:" 0-10%" \
+ AREA:cpuUse20#3465a4:"11-20%" \
+ AREA:cpuUse30#204a87:"21-30%" \
+ AREA:cpuUse40#b8d029:"31-40%" \
+ AREA:cpuUse50#e4e11e:"41-50%" \
+ COMMENT:"           " \
+ GPRINT:cpuUse:MIN:"Minimum \\: %2.1lf%%%s " \
+ GPRINT:cpuUse:MAX:"Maximum \\: %2.1lf%%%s" \
+ COMMENT:"\\n" \
+ COMMENT:" " \
+ AREA:cpuUse60#fee610:"51-60%" \
+ AREA:cpuUse70#f4bd1b:"61-70%" \
+ AREA:cpuUse80#eaa322:"71-80%" \
+ AREA:cpuUse90#de6822:"81-90%" \
+ AREA:cpuUse100#d94c20:"91-100%" \
+ COMMENT:"          " \
+ GPRINT:cpuUse:LAST:"Current \\: %2.1lf%%%s" \
+ GPRINT:cpuUse:AVERAGE:"Average \\: %2.1lf%%%s"
